--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="hero">
-            <img src="ajpogi.jpg" alt="Image of a handsome man" class="profile-pic">
+            <img src="C:\Users\junio\OneDrive\Documents\ajpogi.jpg" alt="Image of a handsome man" class="profile-pic">
             <div class="hero-content">
                 <h1>Carl AJ Junio</h1>
                 <p>BSIT Student from Pamantasan ng Lungsod ng Pasig</p>
